compiler/parser/SplikitParser.py
# Generated from compiler/Splikit.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SplikitParser ( Parser ):

    grammarFileName = "Splikit.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'func'", "'while'", 
                     "'return'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'nil'", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'&&'", "'||'", "'!'", "'.'", "','", "'='", 
                     "'('", "')'", "'{'", "'}'", "'->'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FUNC", "WHILE", "RETURN", 
                      "INT", "FLOAT", "STRING", "BOOL", "NIL", "ID", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EEQ", "NEQ", "GT", "LT", 
                      "GTE", "LTE", "AND", "OR", "NOT", "DOT", "COMMA", 
                      "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "RETURNS", "COMMENT", "WHITESPACE" ]

    RULE_parse = 0
    RULE_type = 1
    RULE_stmt = 2
    RULE_bodyStmts = 3
    RULE_body = 4
    RULE_ifStmt = 5
    RULE_elseifStmt = 6
    RULE_elseStmt = 7
    RULE_whileStmt = 8
    RULE_funcAssign = 9
    RULE_varAssign = 10
    RULE_arg = 11
    RULE_args = 12
    RULE_param = 13
    RULE_params = 14
    RULE_call = 15
    RULE_atom = 16
    RULE_expr = 17

    ruleNames =  [ "parse", "type", "stmt", "bodyStmts", "body", "ifStmt", 
                   "elseifStmt", "elseStmt", "whileStmt", "funcAssign", 
                   "varAssign", "arg", "args", "param", "params", "call", 
                   "atom", "expr" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FUNC=3
    WHILE=4
    RETURN=5
    INT=6
    FLOAT=7
    STRING=8
    BOOL=9
    NIL=10
    ID=11
    ADD=12
    SUB=13
    MUL=14
    DIV=15
    MOD=16
    EEQ=17
    NEQ=18
    GT=19
    LT=20
    GTE=21
    LTE=22
    AND=23
    OR=24
    NOT=25
    DOT=26
    COMMA=27
    ASSIGN=28
    LPAREN=29
    RPAREN=30
    LBRACE=31
    RBRACE=32
    RETURNS=33
    COMMENT=34
    WHITESPACE=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SplikitParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.StmtContext)
            else:
                return self.getTypedRuleContext(SplikitParser.StmtContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = SplikitParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 570429402) != 0):
                self.state = 36
                self.stmt()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(SplikitParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def getRuleIndex(self):
            return SplikitParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = SplikitParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(SplikitParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssign(self):
            return self.getTypedRuleContext(SplikitParser.VarAssignContext,0)


        def funcAssign(self):
            return self.getTypedRuleContext(SplikitParser.FuncAssignContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(SplikitParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(SplikitParser.WhileStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = SplikitParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.varAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.funcAssign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(SplikitParser.StmtContext,0)


        def RETURN(self):
            return self.getToken(SplikitParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_bodyStmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStmts" ):
                return visitor.visitBodyStmts(self)
            else:
                return visitor.visitChildren(self)




    def bodyStmts(self):

        localctx = SplikitParser.BodyStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bodyStmts)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 6, 7, 8, 9, 10, 11, 25, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(SplikitParser.RETURN)
                self.state = 55
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SplikitParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SplikitParser.RBRACE, 0)

        def bodyStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.BodyStmtsContext)
            else:
                return self.getTypedRuleContext(SplikitParser.BodyStmtsContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = SplikitParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(SplikitParser.LBRACE)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 570429434) != 0):
                self.state = 59
                self.bodyStmts()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(SplikitParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SplikitParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(SplikitParser.BodyContext,0)


        def elseifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.ElseifStmtContext)
            else:
                return self.getTypedRuleContext(SplikitParser.ElseifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(SplikitParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = SplikitParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SplikitParser.IF)
            self.state = 68
            self.expr(0)
            self.state = 69
            self.body()
            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 70
                    self.elseifStmt() 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 76
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(SplikitParser.ELSE, 0)

        def IF(self):
            return self.getToken(SplikitParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(SplikitParser.BodyContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_elseifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifStmt" ):
                return visitor.visitElseifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseifStmt(self):

        localctx = SplikitParser.ElseifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(SplikitParser.ELSE)
            self.state = 80
            self.match(SplikitParser.IF)
            self.state = 81
            self.expr(0)
            self.state = 82
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(SplikitParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(SplikitParser.BodyContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = SplikitParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(SplikitParser.ELSE)
            self.state = 85
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SplikitParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(SplikitParser.BodyContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = SplikitParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SplikitParser.WHILE)
            self.state = 88
            self.expr(0)
            self.state = 89
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(SplikitParser.FUNC, 0)

        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def LPAREN(self):
            return self.getToken(SplikitParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SplikitParser.RPAREN, 0)

        def body(self):
            return self.getTypedRuleContext(SplikitParser.BodyContext,0)


        def RETURNS(self):
            return self.getToken(SplikitParser.RETURNS, 0)

        def type_(self):
            return self.getTypedRuleContext(SplikitParser.TypeContext,0)


        def params(self):
            return self.getTypedRuleContext(SplikitParser.ParamsContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_funcAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAssign" ):
                return visitor.visitFuncAssign(self)
            else:
                return visitor.visitChildren(self)




    def funcAssign(self):

        localctx = SplikitParser.FuncAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SplikitParser.FUNC)
            self.state = 92
            self.match(SplikitParser.ID)
            self.state = 93
            self.match(SplikitParser.LPAREN)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 94
                self.params()


            self.state = 97
            self.match(SplikitParser.RPAREN)

            self.state = 98
            self.match(SplikitParser.RETURNS)
            self.state = 99
            self.type_()
            self.state = 101
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(SplikitParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def type_(self):
            return self.getTypedRuleContext(SplikitParser.TypeContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_varAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarAssign" ):
                return visitor.visitVarAssign(self)
            else:
                return visitor.visitChildren(self)




    def varAssign(self):

        localctx = SplikitParser.VarAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 103
                self.type_()


            self.state = 106
            self.match(SplikitParser.ID)
            self.state = 107
            self.match(SplikitParser.ASSIGN)
            self.state = 108
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = SplikitParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.ArgContext)
            else:
                return self.getTypedRuleContext(SplikitParser.ArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SplikitParser.COMMA)
            else:
                return self.getToken(SplikitParser.COMMA, i)

        def getRuleIndex(self):
            return SplikitParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = SplikitParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.arg()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 113
                self.match(SplikitParser.COMMA)
                self.state = 114
                self.arg()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SplikitParser.TypeContext,0)


        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def getRuleIndex(self):
            return SplikitParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = SplikitParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.type_()
            self.state = 121
            self.match(SplikitParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.ParamContext)
            else:
                return self.getTypedRuleContext(SplikitParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SplikitParser.COMMA)
            else:
                return self.getToken(SplikitParser.COMMA, i)

        def getRuleIndex(self):
            return SplikitParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = SplikitParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.param()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 124
                self.match(SplikitParser.COMMA)
                self.state = 125
                self.param()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def LPAREN(self):
            return self.getToken(SplikitParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SplikitParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(SplikitParser.ArgsContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = SplikitParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SplikitParser.ID)
            self.state = 132
            self.match(SplikitParser.LPAREN)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 570429376) != 0):
                self.state = 133
                self.args()


            self.state = 136
            self.match(SplikitParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SplikitParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SplikitParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(SplikitParser.STRING, 0)

        def BOOL(self):
            return self.getToken(SplikitParser.BOOL, 0)

        def NIL(self):
            return self.getToken(SplikitParser.NIL, 0)

        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def LPAREN(self):
            return self.getToken(SplikitParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(SplikitParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(SplikitParser.RPAREN, 0)

        def getRuleIndex(self):
            return SplikitParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = SplikitParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_atom)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(SplikitParser.INT)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(SplikitParser.FLOAT)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.match(SplikitParser.STRING)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.match(SplikitParser.BOOL)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.match(SplikitParser.NIL)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 143
                self.match(SplikitParser.ID)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 7)
                self.state = 144
                self.match(SplikitParser.LPAREN)
                self.state = 145
                self.expr(0)
                self.state = 146
                self.match(SplikitParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def call(self):
            return self.getTypedRuleContext(SplikitParser.CallContext,0)


        def atom(self):
            return self.getTypedRuleContext(SplikitParser.AtomContext,0)


        def NOT(self):
            return self.getToken(SplikitParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.ExprContext)
            else:
                return self.getTypedRuleContext(SplikitParser.ExprContext,i)


        def ADD(self):
            return self.getToken(SplikitParser.ADD, 0)

        def SUB(self):
            return self.getToken(SplikitParser.SUB, 0)

        def MUL(self):
            return self.getToken(SplikitParser.MUL, 0)

        def DIV(self):
            return self.getToken(SplikitParser.DIV, 0)

        def MOD(self):
            return self.getToken(SplikitParser.MOD, 0)

        def EEQ(self):
            return self.getToken(SplikitParser.EEQ, 0)

        def NEQ(self):
            return self.getToken(SplikitParser.NEQ, 0)

        def GT(self):
            return self.getToken(SplikitParser.GT, 0)

        def LT(self):
            return self.getToken(SplikitParser.LT, 0)

        def GTE(self):
            return self.getToken(SplikitParser.GTE, 0)

        def LTE(self):
            return self.getToken(SplikitParser.LTE, 0)

        def AND(self):
            return self.getToken(SplikitParser.AND, 0)

        def OR(self):
            return self.getToken(SplikitParser.OR, 0)

        def DOT(self):
            return self.getToken(SplikitParser.DOT, 0)

        def ID(self):
            return self.getToken(SplikitParser.ID, 0)

        def LPAREN(self):
            return self.getToken(SplikitParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SplikitParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(SplikitParser.ArgsContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_expr
